<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <CheckBox
                android:id="@+id/cbVerticalList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vertical List View" />

            <CheckBox
                android:id="@+id/cbHorizontalList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "Horizontal List View" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cbCustomViewList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Custom View List" />

            <CheckBox
                android:id="@+id/cbGridViewList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Grid View" />
        </LinearLayout>


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" />

</LinearLayout>